--- a/Todo.Web/Views/web.config
+++ b/Todo.Web/Views/web.config
@@ -18,6 +18,7 @@
         <add namespace="System.Web.Routing" />
         <add namespace="Todo.Web" />
         <add namespace="Todo.Web.HtmlHelpers"/>
+       <add namespace="Todo.Domain.Enums" />
         <add namespace="Todo.Domain.Entities" />
       </namespaces>
     </pages>
